Fix alignment of diff switch buttons

--- a/app/assets/stylesheets/submissions.css.less
+++ b/app/assets/stylesheets/submissions.css.less
@@ -158,10 +158,13 @@
     margin-bottom: 1em;
     width: 100%;
     display: flex;
-    vertical-align: middle;
 
     .diff-switch-buttons {
       align-self: flex-end;
+
+      .btn {
+        top: -1px;
+      }
 
       span {
         margin-right: .5em;
